development/jenkins.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: jenkins
  name: jenkins
  namespace: development
spec:
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      securityContext:
        runAsUser: 0
        runAsGroup: 0
      containers:
        - name: jenkins
          image: jenkinsci/blueocean:1.25.5
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
            - containerPort: 50000
              name: node
              protocol: TCP
          resources:
          volumeMounts:
            - mountPath: /var/jenkins_home
              name: pvc
              subPath: jenkins
            - mountPath: /root/release
              name: pvc
              subPath: release
      volumes:
        - name: pvc
          persistentVolumeClaim:
            claimName: hhd-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins-devops-lass-net
  namespace: development
spec:
  ports:
    - port: 8080
      name: http 
      protocol: TCP
      targetPort: 8080
    - port: 50000
      name: node 
      protocol: TCP
      targetPort: 50000
  selector:
    app: jenkins
  sessionAffinity: None
  type: ClusterIP
