development/mongo.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mongo
  name: mongo
  namespace: development
spec:
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      securityContext:
        runAsUser: 0
        runAsGroup: 0
      containers:
        - name: mongo
          image: mongo:5.0.23
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: 300Mi
          args:
            - --config 
            - /etc/mongo/mongod.conf
          ports:
            - containerPort: 27017
              name: tcp
              protocol: TCP
          volumeMounts:
            - mountPath: /etc/mongo
              name: config
            - mountPath: /data
              name: pvc
      volumes:
        - name: pvc
          persistentVolumeClaim:
            claimName: mongo
        - name: config
          configMap:
            name: mongo.config

---
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: development
spec:
  ports:
    - port: 27017
      name: tcp 
      protocol: TCP
      targetPort: 27017
  selector:
    app: mongo
  sessionAffinity: None
  type: ClusterIP
