development/mysql.yaml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mysql
  name: mysql
  namespace: development
spec:
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      securityContext:
        runAsUser: 0
        runAsGroup: 0
      containers:
        - name: mysql
          image: mysql:8.0.30 
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: 400Mi
          ports:
            - containerPort: 3306
              name: tcp
              protocol: TCP
          volumeMounts:
            - mountPath: /etc/mysql/conf.d
              name: config
            - mountPath: /var/lib/mysql
              name: pvc
      volumes:
        - name: pvc
          persistentVolumeClaim:
            claimName: mysql
        - name: config
          configMap:
            name: mysql.config
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: development
spec:
  ports:
    - port: 3306
      name: tcp 
      protocol: TCP
      targetPort: 3306
  selector:
    app: mysql
  sessionAffinity: None
  type: ClusterIP
