development/nuget.yaml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nuget
  name: nuget
  namespace: development
spec:
  selector:
    matchLabels:
      app: nuget
  template:
    metadata:
      labels:
        app: nuget
    spec:
      securityContext:
        runAsUser: 0
        runAsGroup: 0
      containers:
        - name: nuget
          image: loicsharma/baget:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
          volumeMounts:
            - mountPath: /var/baget
              name: pvc
              subPath: nuget
      volumes:
        - name: pvc
          persistentVolumeClaim:
            claimName: hhd-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: nuget-lass-net
  namespace: development
spec:
  ports:
    - port: 80
      name: http
      protocol: TCP
      targetPort: 80
  selector:
    app: nuget
  sessionAffinity: None
  type: ClusterIP
