development/redis-cluster.yaml
---
# redis cluster service
apiVersion: v1
kind: Service
metadata:
  name: redis-cluster
  namespace: development
spec:
  type: NodePort
  ports:
    - name: redis-6379
      port: 6379
      protocol: TCP
      targetPort: 6379
  selector:
    app: redis-cluster
---
# redis statefulSet
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis-cluster
  namespace: development
spec:
  replicas: 3
  selector:
    matchLabels:
      app: redis-cluster
  serviceName: redis-cluster
  template:
    metadata:
      labels:
        app: redis-cluster
    spec:
      imagePullSecrets:
        - name: harbor
      containers:
        - name: redis-cluster
          image: redis:7.0.2-bullseye
          imagePullPolicy: IfNotPresent
          command: ["redis-server"]
          args:
            - /usr/local/etc/redis/redis.conf
            - --cluster-announce-ip
            - "$(POD_IP)"
          ports:
            - name: redis-6379
              containerPort: 6379
              protocol: TCP
            - name: redis-16379
              containerPort: 16379
              protocol: TCP
          volumeMounts:
            - name: conf
              mountPath: /usr/local/etc/redis/
            - name: data
              mountPath: /data
      volumes:
        - name: conf
          configMap:
            name: redis-cluster-config
        - name: data
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: "rook-ceph-block"
        resources:
          requests:
            storage: 1Gi
