development/redis.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: redis
  name: redis
  namespace: development
spec:
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      securityContext:
        runAsUser: 0
        runAsGroup: 0
      containers:
        - name: redis
          image: redis:7.2.3-alpine
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: 200Mi
          args:
            - redis-server 
            - /usr/local/etc/redis/redis.conf
          ports:
            - containerPort: 6379
              name: tcp
              protocol: TCP
          resources:
          volumeMounts:
            - mountPath: /usr/local/etc/redis
              name: config
      volumes:
        - name: config
          configMap:
            name: redis.config
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: development
spec:
  ports:
    - port: 6379
      name: tcp 
      protocol: TCP
      targetPort: 6379
      nodePort: 30379
  selector:
    app: redis
  sessionAffinity: None
  type: NodePort
#  type: ClusterIP
