development/gateway.yml
---
# gateway

apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: development
  namespace: development
spec:
  gatewayClassName: nginx
  listeners:
    - name: nuget-https
      protocol: HTTPS
      port: 443
      hostname: nuget.mirror.lass.net
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            group: ""
            name: nuget-certs 
    - name: nuget-http
      protocol: HTTP
      port: 80
      hostname: nuget.mirror.lass.net

---
#backend tls policy

#apiVersion: gateway.networking.k8s.io/v1alpha2
#kind: BackendTLSPolicy
#metadata:
#  name: dashboard-tls-policy
#  namespace: kubernetes-dashboard
#spec:
#  targetRef:
#    kind: Service
#    name: kubernetes-dashboard
#    group: ""
#  tls:
#    wellKnownCACerts: "System"
#    hostname: ui.k8s.lass.net

---
# http route
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nuget-route
  namespace: development
spec:
  parentRefs:
    - name: development
  hostnames:
    - nuget.mirror.lass.net
  rules:
    - backendRefs:
      - name: nuget
        port: 80
